--- a/nx.json
+++ b/nx.json
@@ -23,7 +23,7 @@
     "demo-angular": {
       "tags": []
     },
-    "nativescript-downloader": {
+    "typeorm-compat": {
       "tags": []
     }
   },
