add typeorm plugin

--- a/apps/demo-angular/package.json
+++ b/apps/demo-angular/package.json
@@ -3,7 +3,7 @@
   "dependencies": {
     "@nativescript/core": "file:../../node_modules/@nativescript/core",
     "@nativescript/nativescript-downloader": "file:../../dist/packages/nativescript-downloader",
-    "@pekevski/typeorm-compat": "file:../../dist/packages/typeorm-compat"
+    "@pekevski/typeorm": "file:../../dist/packages/typeorm"
   },
   "devDependencies": {
     "@nativescript/android": "8.0.0",
