--- a/packages/typeorm/tsconfig.json
+++ b/packages/typeorm/tsconfig.json
@@ -5,6 +5,5 @@
     "rootDir": "."
   },
   "exclude": ["**/*.spec.ts", "angular"],
-  "include": ["**/*.ts", "shim/*.ts"],
-  "files": ["nativescript.webpack.ts"],
+  "include": ["**/*.ts", "references.d.ts", "shim/*.ts"]
 }
