--- a/packages/typeorm/tsconfig.json
+++ b/packages/typeorm/tsconfig.json
@@ -5,5 +5,5 @@
     "rootDir": "."
   },
   "exclude": ["**/*.spec.ts", "angular"],
-  "include": ["**/*.ts", "references.d.ts", "shim/*.ts"]
+  "include": ["**/*.ts", "references.d.ts"]
 }
